correct heigh footer align-items

--- a/src/scss/Footer/_footer.scss
+++ b/src/scss/Footer/_footer.scss
@@ -1,7 +1,7 @@
 .containerFooter {
     height: 870px;
     display: flex;
-    justify-content: center;
+    align-items: center;
     &::before {
         content: "";
         position: absolute;
